<resources>
    <string name="app_name">Demo</string>


    <string name="multi">MULTIPLY</string>
    <string name="div">DIVIDE</string>
    <string name="add">ADD</string>
    <string name="sub">SUBTRACT</string>


    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="refresh">REFRESH</string>

    <string name="no1">NUMBER 1:</string>
    <string name="no2">NUMBER 2:</string>
    <string name="op">OPERAND:</string>
    <string name="result">RESULT:</string>
    <string name="anss">ans</string>
    <string name="opp">op</string>
    <string name="res2">no.2</string>
    <string name="res1">no.1</string>

    <string name="err">Error: Division by zero</string>

</resources>