<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints">

        <!-- Your existing TableRows -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multi"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/one"
                android:onClick="button1"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/two"
                android:onClick="button2"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/three"
                android:onClick="button3"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

<!--        second row-->
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/div"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/four"
                android:onClick="button4"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/five"
                android:onClick="button5"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/six"
                android:onClick="button6"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/subtract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub"

                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seven"
                android:onClick="button7"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eight"
                android:onClick="button8"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nine"
                android:onClick="button9"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:layout_span="3"
                style="?android:attr/buttonBarButtonStyle" />



        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">


            <TextView
                android:id="@+id/firstTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/no1"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/firstResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/no1"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">


            <TextView
                android:id="@+id/secondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/no2"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/secondResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:autofillHints=""
                android:background="@android:color/transparent"
                android:enabled="false"
                android:hint="@string/no2"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">


            <TextView
                android:id="@+id/operand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/op"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/typeOfoPERAND"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:inputType="text"
                android:enabled="false"
                android:layout_span="3"
                android:hint="@string/opp"
                android:minHeight="48dp"
                android:autofillHints="" />


        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*">


            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/result"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:inputType="text"
                android:enabled="false"
                android:layout_span="3"
                android:hint="@string/anss"
                android:minHeight="48dp"
                android:autofillHints="" />


        </TableRow>

    </TableLayout>


    <TextView
        android:id="@+id/r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>